[package]
name = "obsiroh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
futures = "0.3.30"
iroh = { path = "../iroh/iroh" }
tokio = "1.32.0"
tokio-util = "0.7.10"
